infrastructure/ufe-controller/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ufe-controller
spec:
  parentRefs:
  - name: wac-hospital-gateway
    namespace: wac-hospital
  - name: wac-hospital-gateway # Additional parent reference, consider necessity
    namespace: wac-hospital-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ui
    backendRefs:
    - group: ""
      kind: Service
      name: ufe-controller
      port: 80
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /ui
